--- a/problems.ipynb
+++ b/problems.ipynb
@@ -7,6 +7,46 @@
    "source": [
     "# Emerging Technologies"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b31ae0",
+   "metadata": {},
+   "source": [
+    "## Problem 1: Generating Random Boolean Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a2b611e",
+   "metadata": {},
+   "source": [
+    "## Problem 2: Classical Testing for Function Type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af471ff9",
+   "metadata": {},
+   "source": [
+    "## Problem 3: Quantum Oracles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35910f49",
+   "metadata": {},
+   "source": [
+    "## Problem 4: Deutsch's Algorithm with Qiskit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83bb12a7",
+   "metadata": {},
+   "source": [
+    "## Problem 5: Scaling to the Deutsch-Jozsa Algorithm"
+   ]
   }
  ],
  "metadata": {
