Markdown explanation of the Deutsch-Jozsa algorithm added

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -18,6 +18,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13631a26",
+   "metadata": {},
+   "source": [
+    "### In order for me to be able to generate random boolean functions, I am going to use the Deutsch-Jozsa algorithm. The Deutsch-Jozsa algorithm is an algorithm that works with special kinds of functions. Each function takes serveral Boolean values as input and then returns either true or false. The function is guaranteed to be either a constant function which always returns the same value, or a balanced function. The output will depend on whether the function chosen was constant or balanced."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64e1271b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a2b611e",
    "metadata": {},
    "source": [
