Created a function that returns all possible boolean input combinations

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -25,16 +25,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dfba07bf",
+   "metadata": {},
+   "source": [
+    "### Before creating constant or balanced functions, we need all possible inputs. Each input can be etiher true or false. In this case we have four inputs (a,b,c,d). So the total number of combinations would be 16 (2^4). Examples of the possible combinations would be 1. true, true, true, true, 2. false, false, false, false, 3. false, false, false, true and 4. false, false, true, false"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64e1271b",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 1,
+   "id": "b776f7d3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0a523234",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_all_inputs():\n",
+    "    \"\"\"\n",
+    "    This function is responsible for generating all possible Boolean input combinations for four inputs\n",
+    "    \n",
+    "    Each input can be either true or false we have four inputs total and we want every possible combination which would give us 16 total combinations\n",
+    "    \n",
+    "    Returns:\n",
+    "    \n",
+    "    list of tuples\n",
+    "    \n",
+    "    Each tuple contains four Boolean values\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # I am using Python's itertools.product to create combinations\n",
+    "    # product([False, True], repeat=4) means that you take a false and a true repeat them 4 times and then make every possible grouping, automatically creating all 16 combinations\n",
+    "    \n",
+    "    all_combinations = list(product([False, True], repeat=4))\n",
+    "    \n",
+    "    # Then I convert it into a list so it is easier to use later\n",
+    "    \n",
+    "    return all_combinations\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c86eea69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is a test to see that the generate_all_inputs() function works\n",
+    "\n",
+    "if __name__ == \"_main_\":\n",
+    "    inputs = generate_all_inputs()\n",
+    "    \n",
+    "    print(\"Total combinations:\", len(inputs))\n",
+    "    \n",
+    "    for combo in inputs:\n",
+    "        print(combo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,8 +125,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
