Created a function that generates constant functions

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b776f7d3",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "0a523234",
    "metadata": {},
    "outputs": [],
@@ -75,20 +75,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c86eea69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total combinations: 16\n",
+      "(False, False, False, False)\n",
+      "(False, False, False, True)\n",
+      "(False, False, True, False)\n",
+      "(False, False, True, True)\n",
+      "(False, True, False, False)\n",
+      "(False, True, False, True)\n",
+      "(False, True, True, False)\n",
+      "(False, True, True, True)\n",
+      "(True, False, False, False)\n",
+      "(True, False, False, True)\n",
+      "(True, False, True, False)\n",
+      "(True, False, True, True)\n",
+      "(True, True, False, False)\n",
+      "(True, True, False, True)\n",
+      "(True, True, True, False)\n",
+      "(True, True, True, True)\n"
+     ]
+    }
+   ],
    "source": [
     "# This is a test to see that the generate_all_inputs() function works\n",
     "\n",
-    "if __name__ == \"_main_\":\n",
+    "if __name__ == \"__main__\":\n",
     "    inputs = generate_all_inputs()\n",
     "    \n",
     "    print(\"Total combinations:\", len(inputs))\n",
     "    \n",
     "    for combo in inputs:\n",
     "        print(combo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce344417",
+   "metadata": {},
+   "source": [
+    "### A constant function ignores its inputs, so no matter what values you give it it always returns true or false so the next thing that we need to do is write a function that randomly chooses True or False and then return a function that always gives that value\n",
+    "\n",
+    "### The inner function remembers the chosen value. Even after the outer function finishes, the inner function still knows what value to return. This is how we keep the function constant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ebe1bec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def generate_constant_function():\n",
+    "    \"\"\"\n",
+    "    This function creates and returns a constant Boolean function.\n",
+    "    \n",
+    "    A constant function always returns the same value.\n",
+    "    It does NOT care about the input values.\n",
+    "    \n",
+    "    For example:\n",
+    "    \n",
+    "        f(True, True, True, True) -> False\n",
+    "        f(False, False, True, False) -> False\n",
+    "        \n",
+    "    This function will:\n",
+    "    \n",
+    "    1. Randomly choose either True or False\n",
+    "    2. Create a new function that always returns that value\n",
+    "    3. Return the new function\n",
+    "    \n",
+    "    Returns:\n",
+    "    \n",
+    "    A function that takes four Boolean inputs and always returns the same Boolean value\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Randomly choose True or False\n",
+    "    constant_value = random.choice([True, False])\n",
+    "    \n",
+    "    # Now I am going to create a function inside this function\n",
+    "    # This inner function will \"remember\" the constant_value\n",
+    "    # This is called a closure\n",
+    "    # The inner function keeps access to constant_value even after generate_constant_function finishes\n",
+    "    \n",
+    "    def constant_function(a,b,c,d):\n",
+    "        \"\"\"\n",
+    "        A constant Boolean function.\n",
+    "        \n",
+    "        Parameters:\n",
+    "        \n",
+    "        a,b,c,d : bool\n",
+    "            Four Boolean input values\n",
+    "            \n",
+    "        Returns:\n",
+    "        \n",
+    "        bool \n",
+    "        \n",
+    "        Always returns the same value chosen earlier\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        return constant_value\n",
+    "    \n",
+    "    # Returns the constant function we just created\n",
+    "    return constant_function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "028581b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing constant function:\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simple tesr to check that the function is working\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    f = generate_constant_function()\n",
+    "    \n",
+    "    print(\"Testing constant function:\")\n",
+    "    \n",
+    "    print(f(True, True, True, True))\n",
+    "    print(f(False, False, False, False))\n",
+    "    print(f(True, False, True, False))\n"
    ]
   },
   {
