Added markdown explanation of what a balanced function is

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -220,6 +220,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68428106",
+   "metadata": {},
+   "source": [
+    "### The next thing I need to do is to create a balanced function generator. A balanced function returns true for exactly half of all inputs and false for the other half. In this problem we have a total of 16 inputs so we must return exactly 8 true and 8 false.\n",
+    "\n",
+    "### The function will work as follows:\n",
+    "\n",
+    "### The function will generate all 16 input Boolean combinations, shuffle them randomly, pick the first 8 to return True and the remaining 8 inputs to return false.\n",
+    "\n",
+    "### The 8 True inputs are stored in a set, making checking fast and simple so if the input is in the set you return True otherwise you return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a2b611e",
    "metadata": {},
    "source": [
