Created a balanced function

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "b776f7d3",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "0a523234",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "c86eea69",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "ebe1bec2",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "028581b7",
    "metadata": {},
    "outputs": [
@@ -198,9 +198,9 @@
      "output_type": "stream",
      "text": [
       "Testing constant function:\n",
-      "False\n",
-      "False\n",
-      "False\n"
+      "True\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
@@ -230,6 +230,133 @@
     "### The function will generate all 16 input Boolean combinations, shuffle them randomly, pick the first 8 to return True and the remaining 8 inputs to return false.\n",
     "\n",
     "### The 8 True inputs are stored in a set, making checking fast and simple so if the input is in the set you return True otherwise you return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "daf1f8bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_balanced_function():\n",
+    "    \"\"\" \n",
+    "    This function is responsible for creating and returning a balanced function\n",
+    "    \n",
+    "    A balanced function returns True for exactly half of all inputs and False for the other half\n",
+    "    \n",
+    "    With four Boolean inputs there are 16 possible input combinations so a balanced function must return 8 True values and 8 False values\n",
+    "    \n",
+    "    This function will:\n",
+    "    \n",
+    "    1. Generate all 16 possible inputs\n",
+    "    2. Randomly choose 8 of them to return True\n",
+    "    3. Assign False to the remaining 8\n",
+    "    4. Return a function that uses this mapping\n",
+    "    \n",
+    "    Returns:\n",
+    "    \n",
+    "    function\n",
+    "    \n",
+    "    A function that takes four Bollean inputs and returns a balanced True/False result\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Get all possible Boolean input combinations\n",
+    "    all_inputs = generate_all_inputs()\n",
+    "    \n",
+    "    # Randomly shuffle the input list so the selection is random\n",
+    "    random.shuffle(all_inputs)\n",
+    "    \n",
+    "    # Take the first 8 inputs as True\n",
+    "    true_inputs = set(all_inputs[:8]) # The remaining 8 will automatically be false\n",
+    "    \n",
+    "    # Create balanced function\n",
+    "    def balanced_function(a,b,c,d):\n",
+    "        \"\"\" \n",
+    "        This function is a Balanced Boolean function\n",
+    "        \n",
+    "        Parameters:\n",
+    "        \n",
+    "        a,b,c,d : bool\n",
+    "            Four Boolean input values\n",
+    "            \n",
+    "        Returns:\n",
+    "        \n",
+    "        bool\n",
+    "        \n",
+    "        Returns True for exactly half of all possible inputs and False for the rest\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # Combine the inputs into a tuple\n",
+    "        input_tuple = (a,b,c,d)\n",
+    "        \n",
+    "        # Check if this inputs is in the True set\n",
+    "        if input_tuple in true_inputs:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    # Return the balanced function\n",
+    "    return balanced_function\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9e2c5cfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing balanced function:\n",
+      "(False, False, False, False) -> True\n",
+      "(False, False, False, True) -> False\n",
+      "(False, False, True, False) -> False\n",
+      "(False, False, True, True) -> True\n",
+      "(False, True, False, False) -> False\n",
+      "(False, True, False, True) -> False\n",
+      "(False, True, True, False) -> True\n",
+      "(False, True, True, True) -> False\n",
+      "(True, False, False, False) -> False\n",
+      "(True, False, False, True) -> True\n",
+      "(True, False, True, False) -> True\n",
+      "(True, False, True, True) -> False\n",
+      "(True, True, False, False) -> True\n",
+      "(True, True, False, True) -> True\n",
+      "(True, True, True, False) -> True\n",
+      "(True, True, True, True) -> False\n",
+      "True count: 8\n",
+      "False count: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test to check that function is working\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    f = generate_balanced_function()\n",
+    "\n",
+    "    print(\"Testing balanced function:\")\n",
+    "\n",
+    "    inputs = generate_all_inputs()\n",
+    "\n",
+    "    true_count = 0\n",
+    "    false_count = 0\n",
+    "\n",
+    "    for combo in inputs:\n",
+    "        result = f(*combo)\n",
+    "        print(combo, \"->\", result)\n",
+    "        \n",
+    "        if result:\n",
+    "            true_count += 1\n",
+    "        else:\n",
+    "            false_count += 1\n",
+    "            \n",
+    "    print(\"True count:\", true_count)\n",
+    "    print(\"False count:\", false_count)"
    ]
   },
   {
