Markdown explanation added for the final function of problem 1

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -361,6 +361,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba361021",
+   "metadata": {},
+   "source": [
+    "### The Deutsch-Jozsa problem guarantess that the function is either constant or balanced so the random_constant_balanced() function will:\n",
+    "\n",
+    "### 1. Randomly choose constant or balanced\n",
+    "### 2. Call the correct generator\n",
+    "### 3. Return the function that generator creates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a2b611e",
    "metadata": {},
    "source": [
