Docstring written for random_constant_balanced() function

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -372,6 +372,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "887e7555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_constant_balanced():\n",
+    "    \"\"\"\n",
+    "    This function is responsike for returning either a constant Boolean function or a balanced Boolean fucnction.\n",
+    "    \n",
+    "    The Deutsch-Jozsa algorithm assumes the function is guaranteed to be either:\n",
+    "    \n",
+    "        - Constant\n",
+    "        - Balanced\n",
+    "        \n",
+    "    random_constant_balanced() randomly chooses between those two cases\n",
+    "    \n",
+    "    This function will randomly choose constant or balanced, call the corresponding generator function and return the generated function\n",
+    "    \n",
+    "    Returns:\n",
+    "    function\n",
+    "    \n",
+    "    A function that:\n",
+    "        - takes four Boolean inputs\n",
+    "        - returns a Boolean value\n",
+    "        - is guaranteed to be either constant or balanced\n",
+    "    \"\"\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3a2b611e",
    "metadata": {},
