--- a/problems.ipynb
+++ b/problems.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "b776f7d3",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "0a523234",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "c86eea69",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "ebe1bec2",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "028581b7",
    "metadata": {},
    "outputs": [
@@ -198,9 +198,9 @@
      "output_type": "stream",
      "text": [
       "Testing constant function:\n",
-      "True\n",
-      "True\n",
-      "True\n"
+      "False\n",
+      "False\n",
+      "False\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "daf1f8bc",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "9e2c5cfd",
    "metadata": {},
    "outputs": [
@@ -312,20 +312,20 @@
      "output_type": "stream",
      "text": [
       "Testing balanced function:\n",
-      "(False, False, False, False) -> True\n",
-      "(False, False, False, True) -> False\n",
-      "(False, False, True, False) -> False\n",
+      "(False, False, False, False) -> False\n",
+      "(False, False, False, True) -> True\n",
+      "(False, False, True, False) -> True\n",
       "(False, False, True, True) -> True\n",
       "(False, True, False, False) -> False\n",
-      "(False, True, False, True) -> False\n",
-      "(False, True, True, False) -> True\n",
-      "(False, True, True, True) -> False\n",
+      "(False, True, False, True) -> True\n",
+      "(False, True, True, False) -> False\n",
+      "(False, True, True, True) -> True\n",
       "(True, False, False, False) -> False\n",
       "(True, False, False, True) -> True\n",
       "(True, False, True, False) -> True\n",
       "(True, False, True, True) -> False\n",
-      "(True, True, False, False) -> True\n",
-      "(True, True, False, True) -> True\n",
+      "(True, True, False, False) -> False\n",
+      "(True, True, False, True) -> False\n",
       "(True, True, True, False) -> True\n",
       "(True, True, True, True) -> False\n",
       "True count: 8\n",
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "887e7555",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,75 @@
     "        - takes four Boolean inputs\n",
     "        - returns a Boolean value\n",
     "        - is guaranteed to be either constant or balanced\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    \n",
+    "    # Randomly choose which type of function to create\n",
+    "    function_type = random.choice([\"constant\", \"balanced\"])\n",
+    "\n",
+    "    # If the choice is constant, create a constant function\n",
+    "    if function_type == \"constant\":\n",
+    "        return generate_constant_function()\n",
+    "\n",
+    "    # Otherwise, create a balanced function\n",
+    "    else:\n",
+    "        return generate_balanced_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bd3949e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing random constant or balanced function:\n",
+      "(False, False, False, False) -> True\n",
+      "(False, False, False, True) -> True\n",
+      "(False, False, True, False) -> True\n",
+      "(False, False, True, True) -> True\n",
+      "(False, True, False, False) -> True\n",
+      "(False, True, False, True) -> True\n",
+      "(False, True, True, False) -> True\n",
+      "(False, True, True, True) -> True\n",
+      "(True, False, False, False) -> True\n",
+      "(True, False, False, True) -> True\n",
+      "(True, False, True, False) -> True\n",
+      "(True, False, True, True) -> True\n",
+      "(True, True, False, False) -> True\n",
+      "(True, True, False, True) -> True\n",
+      "(True, True, True, False) -> True\n",
+      "(True, True, True, True) -> True\n",
+      "True count: 16\n",
+      "False count: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    f = random_constant_balanced()\n",
+    "\n",
+    "    print(\"Testing random constant or balanced function:\")\n",
+    "\n",
+    "    inputs = generate_all_inputs()\n",
+    "\n",
+    "    true_count = 0\n",
+    "    false_count = 0\n",
+    "\n",
+    "    for combo in inputs:\n",
+    "        result = f(*combo)\n",
+    "        print(combo, \"->\", result)\n",
+    "\n",
+    "        if result:\n",
+    "            true_count += 1\n",
+    "        else:\n",
+    "            false_count += 1\n",
+    "\n",
+    "    print(\"True count:\", true_count)\n",
+    "    print(\"False count:\", false_count)"
    ]
   },
   {
