Markdown explanation added for Problem 2

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -479,6 +479,195 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b59b50fd",
+   "metadata": {},
+   "source": [
+    "### In this problem, we investigate the classical cost of determining whether a Boolean function is constant or balanced.\n",
+    "\n",
+    "### This question is important because Deutsch’s algorithm was designed to demonstrate that a quantum computer can solve this problem more efficiently than a classical computer.\n",
+    "\n",
+    "### Before we can understand the quantum advantage, we must first understand the classical cost."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d77a294",
+   "metadata": {},
+   "source": [
+    "### What Is the Task?\n",
+    "\n",
+    "### We are given a function:\n",
+    "\n",
+    "### f(a, b, c, d)\n",
+    "\n",
+    "### The function:\n",
+    "\n",
+    " - Takes four Boolean inputs\n",
+    " - Returns a single Boolean output\n",
+    " - Is guaranteed to be either:\n",
+    "    - Constant\n",
+    "    - Balanced\n",
+    "\n",
+    "### Our task is to write a classical function:\n",
+    "\n",
+    "### determine_constant_balanced(f)\n",
+    "\n",
+    "### This function must:\n",
+    "\n",
+    " - Call the function f\n",
+    " - Analyze its outputs\n",
+    " - Return either the string:\n",
+    "   - \"constant\"\n",
+    "   - \"balanced\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "299db628",
+   "metadata": {},
+   "source": [
+    "### What Does Constant Mean?\n",
+    "\n",
+    "### A constant function always returns the same value.\n",
+    "\n",
+    "### It does not matter what the input is.\n",
+    "\n",
+    "### Examples:\n",
+    "\n",
+    "### If the function is always True:\n",
+    "\n",
+    "### f(False, False, False, False) → True  \n",
+    "### f(True, True, True, True) → True  \n",
+    "\n",
+    "### If the function is always False:\n",
+    "\n",
+    "### f(False, True, False, True) → False  \n",
+    "### f(True, False, True, False) → False  \n",
+    "\n",
+    "### In both cases, the output never changes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cde2677",
+   "metadata": {},
+   "source": [
+    "### What Does Balanced Mean?\n",
+    "\n",
+    "### A balanced function returns:\n",
+    "\n",
+    "- True for exactly half of all possible inputs\n",
+    "- False for the other half\n",
+    "\n",
+    "### Since we have four Boolean inputs:\n",
+    "\n",
+    "### There are 2⁴ = 16 total possible input combinations.\n",
+    "\n",
+    "### So a balanced function must return:\n",
+    "\n",
+    "- 8 True values\n",
+    "- 8 False values\n",
+    "\n",
+    "### Nothing more and nothing less."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "850a2210",
+   "metadata": {},
+   "source": [
+    "### This problem is very interesting because classically, we must evaluate the function on different inputs in order to understand its behaviour.\n",
+    "\n",
+    "### A classical computer:\n",
+    "\n",
+    "- Does not see the entire function at once\n",
+    "- Can only test one input at a time\n",
+    "- Must gather evidence by calling f repeatedly\n",
+    "\n",
+    "### A quantum computer, using Deutsch’s algorithm, can determine whether the function is constant or balanced with a single evaluation.\n",
+    "\n",
+    "### This shows a potential computational advantage of quantum computing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7739adaa",
+   "metadata": {},
+   "source": [
+    "### How Would a Classical Computer Solve This?\n",
+    "\n",
+    "### A classical computer must test inputs one by one.\n",
+    "\n",
+    "### Possible strategy:\n",
+    "\n",
+    "1. Choose an input\n",
+    "2. Record the output\n",
+    "3. Choose another input\n",
+    "4. Compare outputs\n",
+    "5. Continue until certainty is achieved\n",
+    "\n",
+    "### But how many times must we call f to be absolutely certain?\n",
+    "\n",
+    "### This is the key question of this problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9be8a2e",
+   "metadata": {},
+   "source": [
+    "### Thinking About the Worst Case\n",
+    "\n",
+    "### Suppose we call the function several times and always get the same result.\n",
+    "\n",
+    "### For example:\n",
+    "\n",
+    "### True  \n",
+    "### True  \n",
+    "### True  \n",
+    "### True  \n",
+    "### True  \n",
+    "### True  \n",
+    "### True  \n",
+    "### True  \n",
+    "\n",
+    "### At this point, can we be sure the function is constant?\n",
+    "\n",
+    "### Not necessarily.\n",
+    "\n",
+    "### It might still be balanced, and we just happened to test inputs that return True.\n",
+    "\n",
+    "### This means we must think carefully about how many calls are needed in the worst case to guarantee certainty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f4eb520",
+   "metadata": {},
+   "source": [
+    "### Plan for Implementation\n",
+    "\n",
+    "### We will solve this step by step.\n",
+    "\n",
+    "### My approach will be:\n",
+    "\n",
+    "1. Generate all 16 possible input combinations\n",
+    "2. Call the function f on these inputs\n",
+    "3. Count how many times the output is True\n",
+    "4. Count how many times the output is False\n",
+    "5. Decide:\n",
+    "   - If all outputs are the same → constant\n",
+    "   - If there are exactly 8 True and 8 False → balanced\n",
+    "\n",
+    "### After implementing this, we will analyze the efficiency of the approach.\n",
+    "\n",
+    "### In particular, we will answer:\n",
+    "\n",
+    "### What is the maximum number of function calls needed to be 100% certain?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af471ff9",
    "metadata": {},
    "source": [
